[Build] Gradle auf 7.0 aktualisiert
Damit ist Java 16 möglich, statt "nur" Java 15 mit Preview Features